app/client/components/MessageBar/styles.scss
@import 'colors';

:local(.styles) {

  color: $white;
  transition: all 0.4s;
  position: absolute;
  width: 100%;
  text-align: center;
  overflow: hidden;
  padding: 0;
  transform: translateY(-100%);
  padding: 5px 10px;
  line-height: 1.2em;

  &.visible, &.static {
    transform: none;
  }

  &.static {
    z-index: 1;
    position: static;
  }

  //Styles
  &.msg-default {
    background: $dark-grey;
  }

  &.msg-primary {
    background: $blue;
  }

  &.msg-positive {
    background: $green;
  }

  &.msg-negative {
    background: $red;
  }

  &.msg-warning {
    background: $orange;
  }
}

